# real-time-physics-simulation

./: .clang-format  CMakeLists.txt  README.md  setup.bat
source/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp  InputHandler.cpp  InputHandler.hpp  Math.cpp  Math.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  main.cpp
source/Collision/: CollisionDetector.cpp  CollisionDetector.hpp  CollisionManager.cpp  CollisionManager.hpp
